// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataLayoutBuilder is rendering 1`] = `
DataLayoutBuilder {
  "containerRef": Object {
    "current": null,
  },
  "context": undefined,
  "eventEmitter": EventEmitter {
    "events": Object {},
  },
  "props": Object {
    "appContext": Array [
      Object {},
      [Function],
    ],
    "config": Object {
      "allowFieldSets": true,
      "allowMultiplePages": false,
      "allowRules": false,
      "allowSuccessPage": false,
      "disabledProperties": Array [
        "predefinedValue",
      ],
      "disabledTabs": Array [
        "Autocomplete",
      ],
      "unimplementedProperties": Array [
        "fieldNamespace",
        "indexType",
        "readOnly",
        "validation",
        "visibilityExpression",
      ],
    },
    "context": Object {},
    "dataLayoutBuilderId": "_com_liferay_journal_web_portlet_JournalPortlet_dataLayoutBuilder",
    "fieldTypes": Array [],
    "localizable": true,
    "portletNamespace": "com_liferay_journal_web_portlet_JournalPortlet",
  },
  "refs": Object {},
  "state": Object {},
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;

exports[`DataLayoutBuilder is rendering with localizable false 1`] = `
DataLayoutBuilder {
  "containerRef": Object {
    "current": null,
  },
  "context": undefined,
  "eventEmitter": EventEmitter {
    "events": Object {},
  },
  "props": Object {
    "appContext": Array [
      Object {},
      [Function],
    ],
    "config": Object {
      "allowFieldSets": true,
      "allowMultiplePages": false,
      "allowRules": false,
      "allowSuccessPage": false,
      "disabledProperties": Array [
        "predefinedValue",
      ],
      "disabledTabs": Array [
        "Autocomplete",
      ],
      "unimplementedProperties": Array [
        "fieldNamespace",
        "indexType",
        "readOnly",
        "validation",
        "visibilityExpression",
      ],
    },
    "context": Object {},
    "dataLayoutBuilderId": "_com_liferay_journal_web_portlet_JournalPortlet_dataLayoutBuilder",
    "fieldTypes": Array [],
    "localizable": false,
    "portletNamespace": "com_liferay_journal_web_portlet_JournalPortlet",
  },
  "refs": Object {},
  "state": Object {},
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;
